add defalut filter in task delete task and minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ phpunit.xml.dist
 # Jet Brains/Phpstrom Files
 /.idea
 
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
