--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.3",
+        "friendsofsymfony/rest-bundle": "^3.8",
+        "jms/serializer-bundle": "^5.5",
+        "lexik/jwt-authentication-bundle": "^3.1",
         "omines/datatables-bundle": "^0.9.1",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.0",
